--- a/packages/schema-publisher/package.json
+++ b/packages/schema-publisher/package.json
@@ -4,7 +4,7 @@
   "description": "This package saves a treecreeper schema to s3",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"No test specified\""
   },
   "author": "",
   "license": "ISC",
