--- a/packages/ui-edit-components/package.json
+++ b/packages/ui-edit-components/package.json
@@ -4,7 +4,7 @@
   "description": "from biz-ops admin",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"No test specified\""
   },
   "author": "",
   "license": "ISC"
