--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
   },
   "scripts": {
     "test": "athloi run test",
+    "install-all": "athloi exec npm install",
     "link-local": "athloi script scripts/link-local.js",
     "unlink-local": "athloi exec npm unlink"
   },
