--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "@financial-times/rel-engage": "^7.1.4",
     "artillery": "^1.6.0-28",
     "artillery-plugin-statsd": "^2.2.1",
-    "dotenv": "^8.0.0",
+    "dotenv": "^8.2.0",
     "express-urlrewrite": "^1.2.0",
     "fetch-mock": "^7.3.9",
     "jest": "^24.8.0",
@@ -68,5 +68,7 @@
     "url": "https://github.com/Financial-Times/treecreeper/issues"
   },
   "homepage": "https://github.com/Financial-Times/treecreeper#readme",
-  "workspaces": ["packages/*"]
+  "workspaces": [
+    "packages/*"
+  ]
 }
