--- a/packages/api-s3-document-store/package.json
+++ b/packages/api-s3-document-store/package.json
@@ -4,7 +4,7 @@
   "description": "Module for connecting a Treecreeper&tm; api to an s3 bucket to use as an additional data store for storing properties that are too large to allow efficient querying in neo4j.",
   "main": "index.js",
   "scripts": {
-    "test": "TREECREEPER_DOCSTORE_S3_BUCKET=example-bucket DEBUG=true TIMEOUT=500000 jest --testEnvironment=node"
+    "test": "cross-env TREECREEPER_DOCSTORE_S3_BUCKET=example-bucket DEBUG=true TIMEOUT=500000 jest --testEnvironment=node"
   },
   "author": "",
   "license": "ISC",
@@ -13,5 +13,13 @@
     "aws-sdk": "^2.564.0",
     "deep-diff": "^1.0.2",
     "lodash.isempty": "^4.4.0"
+  },
+  "devDependencies": {
+    "cross-env": "^6.0.3"
+  },
+  "jest": {
+    "setupFilesAfterEnv": [
+      "../../test-helpers/jest.env.js"
+    ]
   }
 }
