--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
   },
   "devDependencies": {
     "@financial-times/athloi": "^1.0.0-beta.28",
-    "@financial-times/rel-engage": "7.1.4",
+    "@financial-times/rel-engage": "^7.2.2",
     "artillery": "^1.6.0-28",
     "artillery-plugin-statsd": "^2.2.1",
     "dotenv": "^8.2.0",
