--- a/packages/tc-api-express/package.json
+++ b/packages/tc-api-express/package.json
@@ -26,5 +26,6 @@
     "url": "https://github.com/Financial-Times/treecreeper.git"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "publish": true
 }
