--- a/packages/tc-api-db-manager/package.json
+++ b/packages/tc-api-db-manager/package.json
@@ -15,5 +15,6 @@
     "url": "https://github.com/Financial-Times/treecreeper.git"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "publish": true
 }
