--- a/packages/tc-api-express-logger/package.json
+++ b/packages/tc-api-express-logger/package.json
@@ -11,5 +11,6 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/Financial-Times/treecreeper.git"
-  }
+  },
+  "publish": true
 }
