--- a/packages/tc-api-graphql/package.json
+++ b/packages/tc-api-graphql/package.json
@@ -23,5 +23,6 @@
     "url": "https://github.com/Financial-Times/treecreeper.git"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "publish": true
 }
