--- a/packages/tc-api-rest-handlers/package.json
+++ b/packages/tc-api-rest-handlers/package.json
@@ -22,5 +22,6 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/Financial-Times/treecreeper.git"
-  }
+  },
+  "publish": true
 }
