--- a/packages/tc-schema-sdk/package.json
+++ b/packages/tc-schema-sdk/package.json
@@ -17,5 +17,6 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/Financial-Times/treecreeper.git"
-  }
+  },
+  "publish": true
 }
