tweak circleci's config

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -99,6 +99,9 @@ jobs:
     steps:
       - *attach_workspace
       - run:
+          name: Setup npm credetials
+          command: echo "//registry.npmjs.org/:_authToken=$NPM_AUTH_TOKEN" > ~/.npmrc
+      - run:
           name: Publish to npm registry
           command: make npm-publish
 
@@ -116,7 +119,7 @@ workflows:
           requires:
             - install
       - publish:
-          context: rel-env-creds
+          context: rel-eng-creds
           requires:
             - install
             - test
