--- a/packages/tc-api-publish-adaptors/package.json
+++ b/packages/tc-api-publish-adaptors/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@financial-times/tc-api-publish-adaptors",
   "version": "0.0.1",
-  "description": "Treecreeper&tm; log punlishing adaptor for @financial-times/tc-api-publish",
+  "description": "Treecreeper&tm; log publishing adaptor for @financial-times/tc-api-publish",
   "main": "index.js",
   "author": "",
   "license": "ISC",
