--- a/packages/tc-api-graphql/package.json
+++ b/packages/tc-api-graphql/package.json
@@ -16,7 +16,9 @@
     "neo4j-graphql-js": "^2.8.0"
   },
   "devDependencies": {
-    "@financial-times/tc-test-helpers": "file:../tc-test-helpers"
+    "@financial-times/tc-test-helpers": "file:../tc-test-helpers",
+    "express": "^4.17.1",
+    "supertest": "^4.0.2"
   },
   "repository": {
     "type": "git",
