add concept of multiple choice to schema

--- a/example-schema/types/MainType.yaml
+++ b/example-schema/types/MainType.yaml
@@ -27,6 +27,11 @@ properties:
     description: Word description.
     label: Word label
     useInSummary: true
+  # someStringList:
+  #   type: Word
+  #   hasMany: true
+  #   description: String list description
+  #   label: String list label
   someBoolean:
     type: Boolean
     description: Boolean description.
@@ -35,6 +40,11 @@ properties:
     type: AnEnum
     description: Enum description.
     label: Enum label
+  someMultipleChoice:
+    type: AnEnum
+    hasMany: true
+    description: Multiple choice description
+    label: Multiple choice label
   someInteger:
     type: Int
     description: Int description.
