--- a/package.json
+++ b/package.json
@@ -19,7 +19,14 @@
     "@financial-times/athloi": "^1.0.0-beta.29",
     "@financial-times/rel-engage": "^7.3.0",
     "@financial-times/tc-api-graphql": "file:./packages/tc-api-graphql",
+    "@babel/cli": "^7.7.0",
+    "@babel/core": "^7.7.2",
+    "@babel/plugin-transform-react-jsx": "^7.7.0",
+    "@babel/preset-env": "^7.7.1",
+    "@babel/preset-react": "^7.7.0",
+    "@babel/register": "^7.7.0",
     "fetch-mock": "^7.3.9",
+    "hyperons": "^1.0.0-beta.2",
     "jest": "^24.8.0",
     "jest-junit": "^7.0.0",
     "lolex": "^4.2.0",
