--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "valid-url": "^1.0.9"
   },
   "devDependencies": {
-    "@financial-times/athloi": "^1.0.0-beta.28",
+    "@financial-times/athloi": "github:ysugimoto/athloi",
     "@financial-times/rel-engage": "^7.2.2",
     "@financial-times/tc-api-db-manager": "file:./packages/tc-api-db-manager",
     "@financial-times/tc-api-rest-handlers": "file:./packages/tc-api-rest-handlers",
