--- a/packages/tc-api-express/package.json
+++ b/packages/tc-api-express/package.json
@@ -25,6 +25,5 @@
     "url": "https://github.com/Financial-Times/treecreeper.git"
   },
   "author": "",
-  "license": "ISC",
-  "publish": true
+  "license": "ISC"
 }
