add more rich relationships for testing

--- a/example-schema/types/ChildType.yaml
+++ b/example-schema/types/ChildType.yaml
@@ -18,3 +18,7 @@ properties:
     type: HasFavouriteChild
     description: Is favourite child of description.
     label: Is favourite child of label
+  relatedChildOf:
+    type: RelatedWithProperties
+    description: RelatedWithProperties description.
+    label: RelatedWithProperties label
