--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,4 +1,7 @@
-version: 2
+version: 2.1
+
+orbs:
+  ft-snyk-orb: financial-times/ft-snyk-orb@0
 
 references:
 
@@ -124,6 +127,16 @@ workflows:
           requires:
             - install
             - test
+          filters:
+            <<: *only_version_tags
+            branches:
+              ignore: /.*/
+    #Scan and monitor vulnerabilities once in production
+      - ft-snyk-orb/scan-and-monitor-js-packages:
+          name: snyk-scan-and-monitor
+          context: rel-eng-creds
+          requires:
+            - publish
           filters:
             <<: *only_version_tags
             branches:
