Fix schema initialisation
Order of function calls in api-express was broken. Also failed to republish schema to correct location

--- a/packages/tc-api-express/package.json
+++ b/packages/tc-api-express/package.json
@@ -18,7 +18,9 @@
     "uuid": "^3.3.3"
   },
   "devDependencies": {
-    "supertest": "^4.0.2"
+    "node-fetch": "^2.6.0",
+    "supertest": "^4.0.2",
+    "@financial-times/tc-schema-publisher": "file:../tc-schema-publisher"
   },
   "repository": {
     "type": "git",
