upgrade circle to 2.1 and add snyk config (#72)
* upgrade circle to 2.1 and add snyk config

* add development scanning

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,4 +1,7 @@
-version: 2
+version: 2.1
+
+orbs:
+  ft-snyk-orb: financial-times/ft-snyk-orb@0
 
 references:
 
@@ -119,11 +122,27 @@ workflows:
           context: rel-eng-creds
           requires:
             - install
+      #Scan package.json for vulnerable dependencies while developing
+      - ft-snyk-orb/scan-js-packages:
+          context: rel-eng-creds
+          requires:
+          - install
+          filters: *only_version_tags
       - publish:
           context: rel-eng-creds
           requires:
             - install
             - test
+          filters:
+            <<: *only_version_tags
+            branches:
+              ignore: /.*/
+    #Scan and monitor vulnerabilities once in production
+      - ft-snyk-orb/scan-and-monitor-js-packages:
+          name: snyk-scan-and-monitor
+          context: rel-eng-creds
+          requires:
+            - publish
           filters:
             <<: *only_version_tags
             branches:
