change circleci working directory path

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -60,7 +60,7 @@ jobs:
       - persist_to_workspace:
           root: *workspace_root
           paths:
-            - biz-ops-api
+            - treecreeper
 
   test:
     <<: *default_container_config
