--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@financial-times/athloi": "github:ysugimoto/athloi",
     "@financial-times/rel-engage": "^7.2.2",
     "@financial-times/tc-api-rest-handlers": "file:./packages/tc-api-rest-handlers",
+    "@financial-times/tc-api-graphql": "file:./packages/tc-api-graphql",
     "@ljharb/eslint-config": "^15.0.2",
     "artillery": "^1.6.0-28",
     "artillery-plugin-statsd": "^2.2.1",
