correct dependencies for publish

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -136,6 +136,8 @@ workflows:
           requires:
             - install
             - test
+            - verify
+            - ft-snyk-orb/scan-js-packages
           filters:
             <<: *only_version_tags
             branches:
