--- a/package.json
+++ b/package.json
@@ -40,10 +40,10 @@
     "@financial-times/tc-schema-publisher": "file:./packages/tc-schema-publisher"
   },
   "devDependencies": {
-    "@financial-times/athloi": "github:ysugimoto/athloi",
+    "@financial-times/athloi": "^1.0.0-beta.29",
     "@financial-times/rel-engage": "^7.2.2",
-    "@financial-times/tc-api-rest-handlers": "file:./packages/tc-api-rest-handlers",
     "@financial-times/tc-api-graphql": "file:./packages/tc-api-graphql",
+    "@financial-times/tc-api-rest-handlers": "file:./packages/tc-api-rest-handlers",
     "@ljharb/eslint-config": "^15.0.2",
     "artillery": "^1.6.0-28",
     "artillery-plugin-statsd": "^2.2.1",
