--- a/packages/tc-api-express/package.json
+++ b/packages/tc-api-express/package.json
@@ -11,6 +11,7 @@
     "@financial-times/tc-api-rest-handlers": "file:../tc-api-rest-handlers",
     "@financial-times/tc-schema-sdk": "file:../tc-schema-sdk",
     "body-parser": "^1.19.0",
+    "connect-timeout": "^1.9.0",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "http-errors": "^1.7.3",
