--- a/example-schema/types/ParentType.yaml
+++ b/example-schema/types/ParentType.yaml
@@ -11,6 +11,9 @@ properties:
     label: Code label
     pattern: CODE
   isParentOf:
-    type: IsParentOf
+    relationship: IS_PARENT_OF
+    type: MainType
     description: Is parent of description.
     label: Is parent of label
+    direction: outgoing
+    hasMany: true
