--- a/packages/tc-api-rest-handlers/package.json
+++ b/packages/tc-api-rest-handlers/package.json
@@ -7,13 +7,13 @@
   "license": "ISC",
   "dependencies": {
     "@financial-times/tc-api-express-logger": "file:../tc-api-express-logger",
-    "@financial-times/tc-api-publish": "file:../tc-api-publish",
     "@financial-times/tc-schema-sdk": "file:../tc-schema-sdk",
     "@financial-times/tc-api-db-manager": "file:../tc-api-db-manager",
     "@financial-times/tc-api-s3-document-store": "file:../tc-api-s3-document-store",
     "common-tags": "^1.8.0",
     "http-errors": "^1.7.3",
     "lodash.isempty": "^4.4.0",
+    "lodash.groupby": "^4.6.0",
     "neo4j-driver": "^1.7.6"
   },
   "repository": {
