--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
   },
   "devDependencies": {
     "@financial-times/athloi": "^1.0.0-beta.29",
-    "@financial-times/rel-engage": "^7.2.2",
+    "@financial-times/rel-engage": "^7.3.0",
     "@financial-times/tc-api-graphql": "file:./packages/tc-api-graphql",
     "@financial-times/tc-api-rest-handlers": "file:./packages/tc-api-rest-handlers",
     "@ljharb/eslint-config": "^15.0.2",
@@ -58,7 +58,8 @@
     "supertest": "^4.0.2"
   },
   "scripts": {
-    "test": "make test"
+    "test": "make test",
+    "postinstall": "athloi exec npm i -- --no-package-lock"
   },
   "repository": {
     "type": "git",
