--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -45,9 +45,7 @@ jobs:
 
       - run:
           name: Install dependencies
-          command: |
-            npm install -no-save
-            make monorepo
+          command: make install
 
       - run:
           name: Get test env vars
