force npm install

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -46,6 +46,9 @@ jobs:
       - run:
           name: Install dependencies
           command: make install
+      - run:
+          name: Install monorepo node modeules
+          command: npm install
 
       - run:
           name: Get test env vars
