send details of deprecated properties in events

--- a/example-schema/types/MainType.yaml
+++ b/example-schema/types/MainType.yaml
@@ -57,6 +57,14 @@ properties:
     label: Children label
     direction: outgoing
     hasMany: true
+  deprecatedChildren:
+    relationship: HAS_CHILD
+    type: ChildType
+    description: Children description.
+    label: Children label
+    direction: outgoing
+    hasMany: true
+    deprecationReason: Replaced by children
   parents:
     relationship: IS_PARENT_OF
     type: ParentType
