--- a/packages/tc-markdown-parser/package.json
+++ b/packages/tc-markdown-parser/package.json
@@ -17,7 +17,8 @@
     "unified": "^8.4.2",
     "unified-stream": "^1.0.5",
     "unist-builder": "^2.0.2",
-    "unist-util-select": "^3.0.0"
+    "unist-util-select": "^3.0.0",
+    "unist-util-visit-parents": "^3.0.1"
   },
   "author": "",
   "license": "ISC"
