delete old test app and tests

--- a/package.json
+++ b/package.json
@@ -5,56 +5,25 @@
   "description": "A set of tools for building adnmin interfaces on top of graph data",
   "main": "index.js",
   "dependencies": {
-    "@financial-times/n-logger": "^6.1.0",
-    "@financial-times/s3o-middleware": "^3.0.1",
-    "apollo-server-express": "^2.8.1",
-    "aws-sdk": "^2.504.0",
-    "body-parser": "^1.19.0",
-    "clone": "^2.1.2",
-    "common-tags": "^1.8.0",
-    "dataloader": "^1.4.0",
-    "deep-diff": "^1.0.2",
-    "deep-freeze": "0.0.1",
-    "express": "^4.17.1",
-    "express-async-errors": "^3.1.1",
-    "graphql": "^14.4.2",
-    "graphql-middleware": "^4.0.1",
-    "graphql-playground-middleware-express": "^1.7.12",
-    "http-errors": "^1.7.3",
-    "js-yaml": "^3.13.1",
-    "jsforce": "^1.9.3",
-    "lodash.groupby": "^4.6.0",
-    "lodash.isempty": "^4.4.0",
-    "lodash.uniqby": "^4.7.0",
-    "neo4j-driver": "^1.7.6",
-    "neo4j-graphql-js": "^2.6.3",
-    "next-metrics": "^3.1.9",
-    "node-fetch": "^2.6.0",
-    "semver": "^6.3.0",
-    "snyk": "^1.242.0",
-    "uuid": "^3.3.2",
-    "valid-url": "^1.0.9",
     "@financial-times/tc-api-db-manager": "file:./packages/tc-api-db-manager",
-    "@financial-times/tc-schema-sdk": "file:./packages/tc-schema-sdk",
+    "@financial-times/tc-api-rest-handlers": "file:./packages/tc-api-rest-handlers",
     "@financial-times/tc-schema-publisher": "file:./packages/tc-schema-publisher",
-    "@financial-times/tc-api-rest-handlers": "file:./packages/tc-api-rest-handlers"
+    "@financial-times/tc-schema-sdk": "file:./packages/tc-schema-sdk",
+    "aws-sdk": "^2.504.0",
+    "express": "^4.17.1",
+    "graphql-playground-middleware-express": "^1.7.12",
+    "neo4j-driver": "^1.7.6",
+    "node-fetch": "^2.6.0"
   },
   "devDependencies": {
     "@financial-times/athloi": "^1.0.0-beta.29",
     "@financial-times/rel-engage": "^7.3.0",
     "@financial-times/tc-api-graphql": "file:./packages/tc-api-graphql",
-    "@ljharb/eslint-config": "^15.0.2",
-    "artillery": "^1.6.0-28",
-    "artillery-plugin-statsd": "^2.2.1",
-    "dotenv": "^8.2.0",
-    "express-urlrewrite": "^1.2.0",
     "fetch-mock": "^7.3.9",
     "jest": "^24.8.0",
     "jest-junit": "^7.0.0",
     "lolex": "^4.2.0",
     "nodemon": "^1.19.1",
-    "proxyquire": "^2.1.1",
-    "sinon": "^7.4.1",
     "supertest": "^4.0.2"
   },
   "scripts": {
