--- a/package.json
+++ b/package.json
@@ -16,21 +16,24 @@
     "node-fetch": "^2.6.0"
   },
   "devDependencies": {
-    "@financial-times/athloi": "^1.0.0-beta.29",
-    "@financial-times/rel-engage": "^7.3.0",
-    "@financial-times/tc-api-graphql": "file:./packages/tc-api-graphql",
     "@babel/cli": "^7.7.0",
     "@babel/core": "^7.7.2",
     "@babel/plugin-transform-react-jsx": "^7.7.0",
     "@babel/preset-env": "^7.7.1",
     "@babel/preset-react": "^7.7.0",
     "@babel/register": "^7.7.0",
+    "@financial-times/athloi": "^1.0.0-beta.29",
+    "@financial-times/rel-engage": "^7.3.0",
+    "@financial-times/tc-api-graphql": "file:./packages/tc-api-graphql",
     "fetch-mock": "^7.3.9",
     "hyperons": "^1.0.0-beta.2",
     "jest": "^24.8.0",
     "jest-junit": "^7.0.0",
     "lolex": "^4.2.0",
     "nodemon": "^1.19.1",
+    "stylelint": "^12.0.0",
+    "stylelint-config-recommended-scss": "^4.1.0",
+    "stylelint-scss": "^3.13.0",
     "supertest": "^4.0.2"
   },
   "scripts": {
