--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@financial-times/tc-schema-publisher": "file:./packages/tc-schema-publisher",
     "@financial-times/tc-schema-sdk": "file:./packages/tc-schema-sdk",
     "aws-sdk": "^2.504.0",
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "graphql-playground-middleware-express": "^1.7.12",
     "neo4j-driver": "^1.7.6",
