moved relationship view into separate component

--- a/package.json
+++ b/package.json
@@ -70,5 +70,8 @@
   "homepage": "https://github.com/Financial-Times/treecreeper#readme",
   "workspaces": [
     "packages/*"
-  ]
+  ],
+  "nodemonConfig": {
+    "ext": "js,graphql,yaml"
+  }
 }
