decoupled edit relationships from form handler

--- a/packages/tc-ui-relationships/package.json
+++ b/packages/tc-ui-relationships/package.json
@@ -1,6 +1,7 @@
 {
 	"dependencies": {
 		"@financial-times/tc-schema-sdk": "file:../tc-schema-sdk",
-		"preact": "^10.0.5"
+		"preact": "^10.0.5",
+		"autolinker": "^3.11.1"
 	}
 }
