--- a/packages/tc-ui-relationships/package.json
+++ b/packages/tc-ui-relationships/package.json
@@ -2,6 +2,7 @@
 	"dependencies": {
 		"@financial-times/tc-schema-sdk": "file:../tc-schema-sdk",
 		"preact": "^10.0.5",
-		"autolinker": "^3.11.1"
+		"autolinker": "^3.11.1",
+		"awesomplete": "^1.1.5"
 	}
 }
