--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "aws-sdk": "^2.504.0",
     "body-parser": "^1.19.0",
     "date-fns": "^2.8.1",
+    "downshift": "^3.4.7",
     "express": "^4.17.1",
     "graphql-playground-middleware-express": "^1.7.12",
     "http-errors": "^1.7.3",
@@ -23,6 +24,7 @@
     "preact": "^10.0.5",
     "preact-render-to-string": "^5.1.2",
     "qs": "^6.9.1",
+    "react-autocomplete": "^1.8.1",
     "showdown": "^1.9.1"
   },
   "devDependencies": {
@@ -36,6 +38,7 @@
     "@financial-times/rel-engage": "^7.3.0",
     "@financial-times/tc-api-graphql": "file:./packages/tc-api-graphql",
     "babel-loader": "^8.0.6",
+    "babel-plugin-module-resolver": "^3.2.0",
     "concurrently": "^5.0.0",
     "css-loader": "^3.2.1",
     "fetch-mock": "^7.3.9",
