--- a/package.json
+++ b/package.json
@@ -11,11 +11,9 @@
     "@financial-times/tc-schema-publisher": "file:./packages/tc-schema-publisher",
     "@financial-times/tc-schema-sdk": "file:packages/tc-schema-sdk",
     "autolinker": "^3.11.1",
-    "awesomplete": "^1.1.5",
     "aws-sdk": "^2.504.0",
     "body-parser": "^1.19.0",
     "date-fns": "^2.8.1",
-    "downshift": "^3.4.7",
     "express": "^4.17.1",
     "graphql-playground-middleware-express": "^1.7.12",
     "http-errors": "^1.7.3",
@@ -24,7 +22,7 @@
     "preact": "^10.0.5",
     "preact-render-to-string": "^5.1.2",
     "qs": "^6.9.1",
-    "react-autocomplete": "^1.8.1",
+    "react-autosuggest": "^9.4.3",
     "showdown": "^1.9.1"
   },
   "devDependencies": {
