--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.17.1",
     "graphql-playground-middleware-express": "^1.7.12",
     "http-errors": "^1.7.3",
+    "module-alias": "^2.2.2",
     "neo4j-driver": "^1.7.6",
     "node-fetch": "^2.6.0",
     "preact": "^10.0.5",
